fixing card alignment + assignment

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px solid red;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
@@ -15,9 +14,9 @@ body {
 
 .container {
     height: 100vh;
-    width: 100vw;
+    width: 90vw;
     display: grid;
-    grid-template-rows: 0.5fr 1fr 1fr;
+    grid-template-rows: 100px 1fr 100px;
     grid-template-columns: 0.5fr 2fr 1fr;
 }
 
@@ -43,10 +42,8 @@ header {
 
 .navbar {
     display: grid;
-    grid-template-columns: auto;
     min-height: 150px;
     grid-column: span 2;
-    grid-row: span 2;
     padding: 15px;
     max-height: 200px;
     background-color: white;
@@ -97,10 +94,25 @@ header {
     display: grid;
 }
 
+.headline {
+    padding-left: 50px;
+    padding-top: 50px;
+    grid-template-columns: 50% 50%;
+    display: grid;
+}
+
+.main {
+    display: grid;
+    grid-column: span 2;
+    grid-template-columns: 1fr 0.5fr;
+    grid-template-rows: 100px 1fr 1fr;
+}
+
 .article {
     display: grid;
-    grid-template-columns: 2fr 2fr;
-    padding: 2em;
+    grid-column: 1;
+    grid-template-columns: 1fr 1fr;
+    padding: 1em;
     gap: 1.5em;
 }
 
@@ -132,10 +144,8 @@ header {
 }
 
 .announcements {
-    padding-right: 50px;
     display: grid;
-    grid-column: 3;
-    grid-row: 3 / span 3;
+    grid-column: 2;
     background-color: white;
     border-radius: 10px;
     box-shadow: 1px 3px 10px #888888;
